#########################################################################
#
# CIO - Cartesian Input / Output library
#
# Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN. 
# All rights reserved.
#
#########################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS = \
    $(top_builddir)/doc/ciolib_ug.pdf \
    $(top_builddir)/doc/reference.pdf \
    $(top_builddir)/doc/fconv_reference.pdf

# dist_data_DATA = doxygen/Doxyfile doxygen/makepdf.sh 
